# bm25-chroma

./: .gitignore  MANIFEST.in  README.md  __init__.py  bm25.py  file_contents.md  hybrid_retriever.py  optimized_bm25.pkl  pyproject.toml  requirements.txt  setup.py  test_readme.py
bm25_chroma/: __init__.py  bm25.py  hybrid_retriever.py
examples/: basic_usage.py  brown_corpus_demo.py  brown_corpus_w_ratio.py
tests/: test_examples.py
